; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-iop/extr_gpio.c_gpio_line_set.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-iop/extr_gpio.c_gpio_line_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GPIO_LOW = common dso_local global i32 0, align 4
@IOP3XX_GPOD = common dso_local global i32* null, align 8
@GPIO_HIGH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gpio_line_set(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i64, i64* %5, align 8
  %7 = call i32 @local_irq_save(i64 %6)
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @GPIO_LOW, align 4
  %10 = icmp eq i32 %8, %9
  br i1 %10, label %11, label %18

11:                                               ; preds = %2
  %12 = load i32, i32* %3, align 4
  %13 = shl i32 1, %12
  %14 = xor i32 %13, -1
  %15 = load i32*, i32** @IOP3XX_GPOD, align 8
  %16 = load i32, i32* %15, align 4
  %17 = and i32 %16, %14
  store i32 %17, i32* %15, align 4
  br label %29

18:                                               ; preds = %2
  %19 = load i32, i32* %4, align 4
  %20 = load i32, i32* @GPIO_HIGH, align 4
  %21 = icmp eq i32 %19, %20
  br i1 %21, label %22, label %28

22:                                               ; preds = %18
  %23 = load i32, i32* %3, align 4
  %24 = shl i32 1, %23
  %25 = load i32*, i32** @IOP3XX_GPOD, align 8
  %26 = load i32, i32* %25, align 4
  %27 = or i32 %26, %24
  store i32 %27, i32* %25, align 4
  br label %28

28:                                               ; preds = %22, %18
  br label %29

29:                                               ; preds = %28, %11
  %30 = load i64, i64* %5, align 8
  %31 = call i32 @local_irq_restore(i64 %30)
  ret void
}

declare dso_local i32 @local_irq_save(i64) #1

declare dso_local i32 @local_irq_restore(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
